--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <link rel="stylesheet" href="/css/bootstrap.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="/css/master.css" media="screen" title="no title" charset="utf-8">
+    <script type="text/javascript" src="js/jquery-3.0.0.min.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
+    <title>Wikipedia Page Viewer</title>
   </head>
   <body>
 
