--- a/index.html
+++ b/index.html
@@ -2,13 +2,23 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/css/bootstrap.css" media="screen" title="no title" charset="utf-8">
-    <link rel="stylesheet" href="/css/master.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/index.css">
     <script type="text/javascript" src="js/jquery-3.0.0.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <title>Wikipedia Page Viewer</title>
   </head>
   <body>
-
+    <div class="container">
+      <div class="jumbotron">
+        <h3> Click <a href="https://en.wikipedia.org/wiki/Special:Random">here</a> to go to a random Wikipedia article<small> Or enter a search query below to do a search on Wikipedia</small></h3>
+        <form class="form-inline flex-container" id="searchForm">
+          <div class="form-group">
+            <input type="text" class="form-control" id="wikiQuery">
+          </div>
+          <button type="submit" class="btn btn-default">Search!</button>
+        </form>
+      </div> <!-- end jumbotron -->
+    </div> <!-- end container -->
   </body>
 </html>
