--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
           </div>
           <button type="submit" class="btn btn-default">Search!</button>
         </form>
+        <div class="list-group">
+          <a href="#" class="list-group-item active">
+            <h4 class="list-group-item-heading">List group item heading</h4>
+            <p class="list-group-item-text">...</p>
+          </a>
+        </div>
       </div> <!-- end jumbotron -->
     </div> <!-- end container -->
   </body>
