--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
     <div class="container">
       <div class="jumbotron">
         <h3> Click <a href="https://en.wikipedia.org/wiki/Special:Random">here</a> to go to a random Wikipedia article<small> Or enter a search query below to do a search on Wikipedia</small></h3>
+
+        <!-- get user input -->
         <form class="form-inline flex-container" id="searchForm">
           <div class="form-group">
             <input type="text" class="form-control" id="wikiQuery">
           </div>
           <button type="submit" class="btn btn-default">Search!</button>
         </form>
-        <div class="list-group">
-          <a href="#" class="list-group-item active">
-            <h4 class="list-group-item-heading">List group item heading</h4>
-            <p class="list-group-item-text">...</p>
-          </a>
+
+        <!-- search results go here -->
+        <div class="list-group" id="resultsList">
         </div>
       </div> <!-- end jumbotron -->
     </div> <!-- end container -->
