remove flex-box styling and use text-align instead

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h3> Click <a href="https://en.wikipedia.org/wiki/Special:Random">here</a> to go to a random Wikipedia article<small> Or enter a search query below to do a search on Wikipedia</small></h3>
 
         <!-- get user input -->
-        <form class="form-inline flex-container" id="searchForm">
+        <form class="form-inline" id="searchForm">
           <div class="form-group">
             <input type="text" class="form-control" id="wikiQuery">
           </div>
